# py-dotpath

./: README.md  pyproject.toml
.github/workflows/: ci.yml
dotpath/: __init__.py  core.py
tests/: test_dotpath.py
